--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-this is the 527 project for:
+This is the 527 project for:
 Luke Sandberg
 Chris Line
 Mike Mercado
 Ryan Gross
 
-We will be attempting to use pex Paramaterized unit tests to fuel fault localization algorithms.
+We will be attempting to use Pex parameterized unit tests to fuel fault localization algorithms.
 
